# qt-extensions-toolkit

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.gitlab/: ubuntu.yml
include/QtExToolkit/: MonoJsonSettingsProvider  Settings
include/QtExtensionsToolkit/: ApplicationBase  CircularReveal  FileDialogModel  FluentIcons  FluentRectangle  FontProvider  ISettingsProvider  Launcher  QApplicationSelector  QuickGlobalPointerHolder  Register  Theme
resources/: toolkit_rc.qrc
resources/config/: theme.json
resources/themes/: catpuccin.json
src/c++/: toolkit.c++  toolkit.h
src/c++/launcher/: applicationbase.h  fontprovider.c++  fontprovider.h  launcherbase.h  qapplication_selector.h
src/c++/quick/: fluentrectangle.c++  fluentrectangle.h  quickglobalpointerholder.c++  quickglobalpointerholder.h
src/c++/settings/: qtextk-isettingsprovider.h  qtextk-monojsonsettingsprovider.c++  qtextk-monojsonsettingsprovider.h  qtextk-settings.c++  qtextk-settings.h
src/c++/theme/: circularreveal.c++  circularreveal.h  fluenticons.h  theme.c++  theme.h
src/c++/widgets/: filedialogmodel.c++  filedialogmodel.h
src/js/: FileExtensions.js  toolkit_js.qrc
src/qml/: toolkit_qml.qrc
src/qml/ui/: QtxButton.qml  QtxCheckbox.qml  QtxClip.qml  QtxFocusRectangle.qml  QtxProgressBar.qml  QtxRangeSlider.qml  QtxSlider.qml  QtxSwitch.qml  QtxTTFIcon.qml  QtxText.qml  QtxTooltip.qml  QtxUIShadow.qml
src/qml/utils/: ThemeChanger.qml
src/qml/widgets/: FileDialog.qml
